[gd_scene load_steps=7 format=3 uid="uid://b8wjhn56qqc7r"]

[ext_resource type="Texture2D" uid="uid://c65l2d2kxsohl" path="res://sprites/pickaxe_speed_upgrade.png" id="1_4xv4r"]
[ext_resource type="Script" uid="uid://c2wo012l0re3u" path="res://scripts/upgrade_spot.gd" id="1_oqg8p"]
[ext_resource type="Texture2D" uid="uid://dlv8ehat7fsqa" path="res://icon.svg" id="2_ljt36"]
[ext_resource type="Texture2D" uid="uid://b4akfd2js1ns1" path="res://sprites/inventory_slot.png" id="4_esm4k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4xv4r"]
size = Vector2(30, 31)

[sub_resource type="LabelSettings" id="LabelSettings_esm4k"]
line_spacing = 0.0
font_size = 10

[node name="UpgradeSpot" type="Node2D" groups=["upgrade"]]
script = ExtResource("1_oqg8p")
upgrade_texture = ExtResource("2_ljt36")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_4xv4r")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_4xv4r")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -52.0
offset_top = -64.0
offset_right = 52.0
offset_bottom = 16.0

[node name="NinePatchRect" type="NinePatchRect" parent="Control"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
texture = ExtResource("4_esm4k")

[node name="CostLabel" type="Label" parent="Control/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect2" type="NinePatchRect" parent="Control"]
custom_minimum_size = Vector2(64, 48)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = -50.0
offset_right = 32.0
offset_bottom = -2.0
grow_horizontal = 2
texture = ExtResource("4_esm4k")

[node name="UpgradeName" type="Label" parent="Control/NinePatchRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 11.0
offset_right = -7.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_esm4k")
horizontal_alignment = 1
autowrap_mode = 2
